--- a/index.html
+++ b/index.html
@@ -301,6 +301,11 @@
           <div
             class="relative z-10 max-w-5xl mx-auto px-6 text-center flex flex-col justify-center h-\[72vh] md:h-\[80vh]"
           >
+             <h1
+          class="text-3xl md:text-5xl font-extrabold leading-tight text-white drop-shadow"
+        >
+          Advanced Water Detection Technology
+        </h1>
             <h1
               class="text-3xl md:text-5xl font-extrabold leading-tight text-white drop-shadow"
             >
