--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     <div class="splide__track">
       <ul class="splide__list">
         <!-- Slide 1 -->
-        <li class="splide__slide relative">
+        <!-- <li class="splide__slide relative">
           <img
             src="img/logo.png.jpg"
             alt="Borehole Drilling"
@@ -329,7 +329,7 @@
               </a>
             </div>
           </div>
-        </li>
+        </li> -->
 
     <!-- Slide 2 -->
     <li class="splide__slide relative">
