--- a/index.html
+++ b/index.html
@@ -290,46 +290,41 @@
       <ul class="splide__list">
         <!-- Slide 1 -->
         <li class="splide__slide relative">
-          <img
-            src="img/logo.png.jpg"
-            alt="Borehole Drilling"
-            class="absolute inset-0 w-full h-full object-cover"
-          />
-          <div
-            class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"
-          ></div>
-          <div
-            class="relative z-10 max-w-5xl mx-auto px-6 text-center flex flex-col justify-center h-\[72vh] md:h-\[80vh]"
-          >
-             <h1
-          class="text-3xl md:text-5xl font-extrabold leading-tight text-white drop-shadow"
-        >
-          Advanced Water Detection Technology
-        </h1>
-            <h1
-              class="text-3xl md:text-5xl font-extrabold leading-tight text-white drop-shadow"
-            >
-              Professional Borehole Drilling & Water Solutions
-            </h1>
-            <p class="mt-4 text-white/90 max-w-2xl mx-auto">
-              Serving Nigeria for 20+ years with reliable hydrogeophysical
-              surveys, drilling, and pump installations.
-            </p>
-            <div class="mt-8 flex items-center justify-center gap-4">
-              <a
-                href="#contact"
-                class="px-6 py-3 bg-primary hover:bg-primary/90 text-white rounded-md font-semibold shadow"
-                >Get Free Consultation</a
+              <img
+                src="assets/images/logo.png.jpg"
+                alt="Borehole Drilling"
+                class="absolute inset-0 w-full h-full object-cover"
+              />
+              <div
+                class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"
+              ></div>
+              <div
+                class="relative z-10 max-w-5xl mx-auto px-6 text-center flex flex-col justify-center h-[72vh] md:h-[80vh]"
               >
-              <a
-                href="tel:+2348104237317"
-                class="px-6 py-3 bg-white/90 hover:bg-white text-primary font-semibold rounded-md flex items-center gap-2"
-              >
-                <i class="fas fa-phone"></i> Call Now
-              </a>
-            </div>
-          </div>
-        </li>
+                <h1
+                  class="text-3xl md:text-5xl font-extrabold leading-tight text-white drop-shadow"
+                >
+                  Professional Borehole Drilling & Water Solutions
+                </h1>
+                <p class="mt-4 text-white/90 max-w-2xl mx-auto">
+                  Serving Nigeria for 20+ years with reliable hydrogeophysical
+                  surveys, drilling, and pump installations.
+                </p>
+                <div class="mt-8 flex items-center justify-center gap-4">
+                  <a
+                    href="#contact"
+                    class="px-6 py-3 bg-primary hover:bg-primary/90 text-white rounded-md font-semibold shadow"
+                    >Get Free Consultation</a
+                  >
+                  <a
+                    href="tel:+2348104237317"
+                    class="px-6 py-3 bg-white/90 hover:bg-white text-primary font-semibold rounded-md flex items-center gap-2"
+                  >
+                    <i class="fas fa-phone"></i> Call Now
+                  </a>
+                </div>
+              </div>
+            </li>
 
     <!-- Slide 2 -->
     <li class="splide__slide relative">
